--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,6 +189,7 @@ add_subdirectory (geobase)
 add_subdirectory (parbase)
 add_subdirectory (fairtools)
 add_subdirectory (MbsAPI)
+add_subdirectory (par)
 If (Boost_FOUND)
    add_subdirectory (fairmq)
 Else (Boost_FOUND)
