Event Visualization added. TODO: Modiofy map class to return a histogram THPoly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,6 +188,8 @@ add_subdirectory (dbase)
 add_subdirectory (geobase)
 add_subdirectory (parbase)
 add_subdirectory (fairtools)
+add_subdirectory (eventdisplay)
+add_subdirectory (eventdisplayAT)
 add_subdirectory (MbsAPI)
 add_subdirectory (par)
 If (Boost_FOUND)
