--- a/eventdisplayAT/CMakeLists.txt
+++ b/eventdisplayAT/CMakeLists.txt
@@ -8,9 +8,11 @@ ${CMAKE_SOURCE_DIR}/parbase
 ${CMAKE_SOURCE_DIR}/geobase
 ${CMAKE_SOURCE_DIR}/eventdisplay
 # Add all the folders having header files you used in the code.
-${CMAKE_SOURCE_DIR}/SPiRIT/eventdisplay
-${CMAKE_SOURCE_DIR}/SPiRIT/format
-${CMAKE_SOURCE_DIR}/SPiRIT/reco/RiemannTracking
+${CMAKE_SOURCE_DIR}/AtMap
+${CMAKE_SOURCE_DIR}/eventdisplayAT
+${CMAKE_SOURCE_DIR}/reco/ATDecoder
+
+
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
@@ -23,28 +25,24 @@ link_directories(${LINK_DIRECTORIES})
 
 set(SRCS
 # Add all the source files below this line. Those must have cc for their extension.
-STEventManager.cc
-STEventManagerEditor.cc
-STEventDrawTask.cc
-STEventDraw.cc
-STHitDraw.cc
-STHitClusterDraw.cc
+ATEventManager.cc
+ATEventDrawTask.cc
 )
 
 CHANGE_FILE_EXTENSION(*.cc *.hh HEADERS "${SRCS}")
 
-Set(LINKDEF STEventDisplayLinkDef.h) # Change the linkdef name and delete this comment
-Set(LIBRARY_NAME STEventDisplay) # Change the library name and delete this comment
+Set(LINKDEF ATEventDisplayLinkDef.h) # Change the linkdef name and delete this comment
+Set(LIBRARY_NAME ATEventDisplay) # Change the library name and delete this comment
 Set(DEPENDENCIES
     Base
-    Stack
+    MCStack
     EventDisplay
 # ROOT Eve package
     Eve
 # Add all library names your code depending on.
 # Basically those are the libraries in the header files' directory.
-    STFormat
-    STReco
+    ATTPCReco
+    AtTpcMap
 )
 
 GENERATE_LIBRARY()
