--- a/eventdisplay/CMakeLists.txt
+++ b/eventdisplay/CMakeLists.txt
@@ -1,50 +1,48 @@
-# Create a library called "libSTEventDisplay" which includes the source files given in the array .
+# Create a library called "libEventDisplay" 
+# 06.12.07  M. Al-Turany
 
 set(INCLUDE_DIRECTORIES
 ${ROOT_INCLUDE_DIR} 
-${BASE_INCLUDE_DIRECTORIES}
+${GEANT3_INCLUDE_DIR}
 ${CMAKE_SOURCE_DIR}/fairtools
-${CMAKE_SOURCE_DIR}/parbase
-${CMAKE_SOURCE_DIR}/geobase
+${CMAKE_SOURCE_DIR}/geobase 
+${CMAKE_SOURCE_DIR}/parbase 
+${CMAKE_SOURCE_DIR}/base 
+${CMAKE_SOURCE_DIR}/base/steer
+${CMAKE_SOURCE_DIR}/base/event
+${CMAKE_SOURCE_DIR}/base/field
+${CMAKE_SOURCE_DIR}/base/sim
+${CMAKE_SOURCE_DIR}/trackbase 
+${CMAKE_SOURCE_DIR}/geane
 ${CMAKE_SOURCE_DIR}/eventdisplay
-# Add all the folders having header files you used in the code.
-${CMAKE_SOURCE_DIR}/SPiRIT/eventdisplay
-${CMAKE_SOURCE_DIR}/SPiRIT/format
-${CMAKE_SOURCE_DIR}/SPiRIT/reco/RiemannTracking
 )
 
-include_directories(${INCLUDE_DIRECTORIES})
+include_directories( ${INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
 ${ROOT_LIBRARY_DIR}
-) 
-
-link_directories(${LINK_DIRECTORIES})
+)
+ 
+link_directories( ${LINK_DIRECTORIES})
 
 set(SRCS
-# Add all the source files below this line. Those must have cc for their extension.
-STEventManager.cc
-STEventManagerEditor.cc
-STEventDrawTask.cc
-STEventDraw.cc
-STHitDraw.cc
-STHitClusterDraw.cc
+FairEventManager.cxx  
+FairMCTracks.cxx
+FairEventManagerEditor.cxx
+FairMCTracksEditor.cxx
+FairBoxSet.cxx
+FairBoxSetDraw.cxx
+FairBoxSetEditor.cxx
+FairPointSetDraw.cxx
+FairMCPointDraw.cxx
+FairHitDraw.cxx
+FairHitPointSetDraw.cxx
+FairTimeStampPointDraw.cxx
 )
 
-CHANGE_FILE_EXTENSION(*.cc *.hh HEADERS "${SRCS}")
-
-Set(LINKDEF STEventDisplayLinkDef.h) # Change the linkdef name and delete this comment
-Set(LIBRARY_NAME STEventDisplay) # Change the library name and delete this comment
-Set(DEPENDENCIES
-    Base
-    Stack
-    EventDisplay
-# ROOT Eve package
-    Eve
-# Add all library names your code depending on.
-# Basically those are the libraries in the header files' directory.
-    STFormat
-    STReco
-)
+Set(HEADERS )
+Set(LINKDEF EventDisplayLinkDef.h)
+Set(LIBRARY_NAME EventDisplay)
+Set(DEPENDENCIES Base Eve)
 
 GENERATE_LIBRARY()
