--- a/eventdisplayAT/CMakeLists.txt
+++ b/eventdisplayAT/CMakeLists.txt
@@ -27,6 +27,7 @@ set(SRCS
 # Add all the source files below this line. Those must have cc for their extension.
 ATEventManager.cc
 ATEventDrawTask.cc
+ATEventProtoDrawTask.cc
 )
 
 CHANGE_FILE_EXTENSION(*.cc *.hh HEADERS "${SRCS}")
