--- a/AtGenerators/CMakeLists.txt
+++ b/AtGenerators/CMakeLists.txt
@@ -3,9 +3,9 @@
 # The extension is already found.  Any number of sources could be listed here.
 
 set(INCLUDE_DIRECTORIES
-${ROOT_INCLUDE_DIR}
-${Boost_INCLUDE_DIRS}
+${ROOT_INCLUDE_DIR} 
 ${PYTHIA8_INCLUDE_DIR}
+${Boost_INCLUDE_DIRS}
 ${SIMPATH}/include
 ${BASE_INCLUDE_DIRECTORIES} 
 ${CMAKE_SOURCE_DIR}/AtGenerators
@@ -26,6 +26,7 @@ link_directories( ${LINK_DIRECTORIES})
 set(SRCS
 Pythia6Generator.cxx
 Pythia8Generator.cxx
+ATTPCIonGenerator.cxx
 )
 
 set(LINKDEF  GenLinkDef.h)
