Hough Space added to visualization. The Hough Space for each event is stored in the TClonesArray

--- a/eventdisplayAT/CMakeLists.txt
+++ b/eventdisplayAT/CMakeLists.txt
@@ -12,7 +12,8 @@ ${BASE_INCLUDE_DIRECTORIES}
 ${CMAKE_SOURCE_DIR}/AtMap
 ${CMAKE_SOURCE_DIR}/eventdisplayAT
 ${CMAKE_SOURCE_DIR}/reco/ATDecoder
-
+${CMAKE_SOURCE_DIR}/reco/HoughTransformation
+${CMAKE_SOURCE_DIR}/par
 
 )
 
