Phase Space generator added (Working fine for 10Be+4He). New class for phi calculation added ATPhiRecoTriple using three strips instead of one

--- a/reco/CMakeLists.txt
+++ b/reco/CMakeLists.txt
@@ -52,6 +52,7 @@ HoughTransformation/ATHoughSpaceLine.cc
 
 ATProtoPhiReco/ATPhiReco.cc
 ATProtoPhiReco/ATPhiRecoSimple.cc
+ATProtoPhiReco/ATPhiRecoTriple.cc
 
 ATDecoderTask.cc
 ATPSATask.cc
