2 Body kinematics working and debug. Euler transformation still needed to propagate the vMC

--- a/AtGenerators/CMakeLists.txt
+++ b/AtGenerators/CMakeLists.txt
@@ -32,6 +32,7 @@ ATTPCIonGenerator.cxx
 ATTPCIonPhaseSpace.cxx
 ATVertexPropagator.cxx
 ATTPC2Body.cxx
+ATEulerTransformation.cxx
 )
 
 set(LINKDEF  GenLinkDef.h)
